# BC805M_nRF52805_BLE

./: CMakeLists.txt  prj.conf  sample.yaml
Drivers/driver_rgbw/: driver_rgbw.c  driver_rgbw.h
boards/: nrf52dk_nrf52805.overlay
components/gleam_adc/: gleam_adc.c  gleam_adc.h
components/gleam_ble/: gleam_ble.c  gleam_ble.h
components/gleam_bq25188/: gleam_bq25188.c  gleam_bq25188.h
components/gleam_ledstrip/: gleam_ledstrip.c  gleam_ledstrip.h
components/gleam_rgbw/: gleam_rgbw.c  gleam_rgbw.h
dts/bindings/led_strip/: custom-ws2812-rgbw-spi.yaml
src/: main.c
